gitconfig pull rebase, cursor shell, copilot

--- a/.gitconfig
+++ b/.gitconfig
@@ -137,6 +137,7 @@
     default = simple
     # Make `git push` push relevant annotated tags when pushing branches out.
     followTags = true
+    autoSetupRemote = true
 
 # URL shorthands
 
@@ -169,3 +170,5 @@
     postBuffer = 524288000
 [init]
     defaultBranch = main
+[pull]
+	rebase = true
